labs/7.fastcgi/0.phpapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
      - name: php-fpm
        image: php:8.2-fpm
        volumeMounts:
        - name: phpinfo-volume
          mountPath: /var/www/html/public/index.php
          subPath: phpinfo.php
      volumes:
      - name: phpinfo-volume
        configMap:
          name: phpinfo

---
apiVersion: v1
kind: Service
metadata:
  name: php-fpm
  labels:
    app: php-fpm
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: fcgi
  selector:
    app: php-fpm
