labs/7.fastcgi/3.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: php-fpm
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "php.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: fastcgi
    backendRefs:
    - name: php-fpm
      port: 9000
